# rabbitmq-management-sdk

./: .gitignore  Justfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  pr-semantic-check.yaml
src/rabbitmq_management_sdk/: __init__.py
src/rabbitmq_management_sdk/client/: config.py  rabbitmq_client.py  utils.py
src/rabbitmq_management_sdk/domains/: base.py
src/rabbitmq_management_sdk/domains/v4/admin/: services.py
src/rabbitmq_management_sdk/domains/v4/admin/schemas/: enums.py  vhost_request.py  vhost_response.py
src/rabbitmq_management_sdk/domains/v4/bindings/: services.py
src/rabbitmq_management_sdk/domains/v4/bindings/schemas/: binding_request.py  binding_response.py  common.py
src/rabbitmq_management_sdk/domains/v4/exchanges/: services.py
src/rabbitmq_management_sdk/domains/v4/exchanges/schemas/: common.py  exchange_request.py  exchange_response.py
src/rabbitmq_management_sdk/domains/v4/queues/: services.py
src/rabbitmq_management_sdk/domains/v4/queues/schemas/: queue_request.py  queue_response.py
src/rabbitmq_management_sdk/http_adapter/: __init__.py  base.py  config.py  exceptions.py  factory.py  httpx.py  retry.py
src/rabbitmq_management_sdk/rabbitmq_client/: config.py  rabbitmq_client.py  utils.py
src/rabbitmq_management_sdk/transport/: __init__.py  base.py  config.py  exceptions.py  factory.py  httpx.py  retry.py
tests/: conftest.py  test_init.py
tests/integration/: test_queues.py  test_rmq_queue.py
tests/live/: test_bindings.py  test_exchanges.py  test_queues.py  test_rmq.py  test_vhosts.py
tests/unit/: test_net.py  test_ssl.py
